<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".statisticalActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:id="@+id/averageDelayBetweenShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averageDelayBetweenShots" />


        <TextView
            android:id="@+id/resultsAverageDelayBetweenShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/resultsaverageDelayBetweenShots" />

        <TextView
            android:id="@+id/numMissedShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/numMissedShots" />

        <TextView
            android:id="@+id/resultsaverageMissedShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/resultsaverageMissedShots" />

        <TextView
            android:id="@+id/sessionShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sessionShots" />

        <TextView
            android:id="@+id/resultssessionShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/resultssessionShots" />

        <TextView
            android:id="@+id/penaltyPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/penaltyPoints" />

        <TextView
            android:id="@+id/resultspenaltyPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/resultspenaltyPoints" />


    </GridLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@mipmap/email123"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp" />

</android.support.constraint.ConstraintLayout>